# wrap-xpdf

./: .gitignore  README.md
cpp/: CMakeLists.txt  common.cmake  extract.cc  xpdf_grpc_server.cc
go/: go.mod
go/cgoclient/: client.go  extract.h  go.mod  wrap_extract.cc  wrap_extract.h
go/example/: go.mod  go.sum  main.go
go/grpcclient/: client.go  go.mod  go.sum
go/xpdfpb/: go.mod  xpdf_service.pb.go  xpdf_service_grpc.pb.go
proto/: xpdf_service.proto
